# parse-tenders

./: README.md  celery_tasks.py  conftest.py  constants.py  docker-compose.yml  main.py  pyproject.toml  test_tender_parse.py
