[tool.poetry]
name = "parse-tenders"
version = "0.1.0"
description = ""
authors = ["dasha <dasha.ved93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
xmltodict = "^0.13.0"
celery = "^5.3.6"
redis = "^5.0.3"
pytest-celery = "^0.0.0"
pytest = "^8.1.1"
pytest-httpx = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
